--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,28 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11MainFragmentActivity"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11MainFragmentActivity_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11PagerAdapter"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11PagerAdapter_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11ThreeFragment"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11ThreeFragment_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11TwoFragment"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11TwoFragment_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_three"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_three_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_two"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_two_msy0402"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_one"
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_one_msy0402"
             android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
