--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0710.lsj0918_mini.adapter.lsj0918ViewpagerFragmentMainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710.lsj0918_mini.lsj0918MainFragmentActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
@@ -23,7 +29,7 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lhj0728_mini.Lhj0728RecyclerViewActivity"
             android:exported="true" />
