--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:targetApi="31" >
 
         <activity
+            android:name=".miniProject.test0710.lsj0918_mini.adapter.lsj0918ViewpagerFragmentMainActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0710.lcs0806_mini.Lcs0806Ch11Viewpager2TestFragmentMainActivity"
             android:exported="true" />
         <activity
