--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0710.nhj0918_mini.NhjMainFragmentActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0710.msy0402_mini.fragment_ch11_two_msy0402"
             android:exported="true" />
         <activity
